--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.12,<3.13"
 dependencies = [
     "loguru (>=0.7.3,<0.8.0)",
     "numpy (>=2.4.1,<3.0.0)",
-    "opencv-python (>=4.13.0.90,<5.0.0.0)"
+    "opencv-python (>=4.13.0.90,<5.0.0.0)",
+    "click (>=8.3.1,<9.0.0)",
+    "picamera2 (>=0.3.33,<0.4.0)"
 ]
 
 [tool.poetry]
@@ -25,3 +27,6 @@ pytest-cov = "^7.0.0"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+say-hello = "main:cli"
