--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "numpy (>=2.4.1,<3.0.0)",
     "opencv-python (>=4.13.0.90,<5.0.0.0)",
     "click (>=8.3.1,<9.0.0)",
-    "picamera2 (>=0.3.33,<0.4.0)"
+    "picamera2 (>=0.3.33,<0.4.0)",
+    "reportlab (>=4.4.9,<5.0.0)"
 ]
 
 [tool.poetry]
