--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ packages = [{include = "autolander", from = "src"}]
 pytest = "^9.0.2"
 pytest-sugar = "^1.1.1"
 pytest-cov = "^7.0.0"
+black = "^26.1.0"
+flake8 = "^7.3.0"
+isort = "^7.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
