--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ dependencies = [
     "opencv-python (>=4.13.0.90,<5.0.0.0)",
     "click (>=8.3.1,<9.0.0)",
     "picamera2 (>=0.3.33,<0.4.0)",
-    "reportlab (>=4.4.9,<5.0.0)"
+    "reportlab (>=4.4.9,<5.0.0)",
+    "tqdm (>=4.67.3,<5.0.0)"
 ]
 
 [tool.poetry]
-packages = [{include = "autolander", from = "src"}]
-
+packages = [{include = "*", from = "src"}]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^9.0.2"
@@ -28,9 +28,20 @@ black = "^26.1.0"
 flake8 = "^7.3.0"
 isort = "^7.0.0"
 
+[tool.black]
+line-length = 88
+target-version = ["py312"]
+skip-string-normalization = false
+
+[tool.isort]
+profile = "black"
+line_length = 88
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-say-hello = "main:cli"
+fmt = "script:run_code_formatting"
+fmt-check = "script:run_code_format_checking"
+clean = "script:clean_project"
