--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "click (>=8.3.1,<9.0.0)",
     "picamera2 (>=0.3.33,<0.4.0)",
     "reportlab (>=4.4.9,<5.0.0)",
-    "tqdm (>=4.67.3,<5.0.0)"
+    "opencv-contrib-python (>=4.13.0.92,<5.0.0.0)"
 ]
 
 [tool.poetry]
