ref: ajout script installable pour calibration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
+calibrate_camera = "ui.cam_calibration_cli:main"
 fmt = "script:run_code_formatting"
 fmt-check = "script:run_code_format_checking"
 clean = "script:clean_project"
+
