--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ piexif==1.1.3
 pillow==12.1.0
 pycamera==0.3.2
 pymavlink==2.4.49
-python-prctl==1.8.1
+python-prctl==1.8.1; sys_platform == 'linux'
 referencing==0.37.0
 rpds-py==0.30.0
 setuptools==80.10.1
